--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
+anyio==4.8.0
 asgiref==3.8.1
+certifi==2024.12.14
 Django==5.1.4
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
 Markdown==3.7
+onesignal-python-api==2.0.2
+onesignal-sdk==2.0.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
+urllib3==2.3.0
