--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 anyio==4.8.0
 asgiref==3.8.1
 certifi==2024.12.14
+charset-normalizer==3.4.1
 Django==5.1.4
 django-filter==24.3
 djangorestframework==3.15.2
@@ -12,10 +13,12 @@ idna==3.10
 Markdown==3.7
 onesignal-python-api==2.0.2
 onesignal-sdk==2.0.0
+pillow==11.1.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+requests==2.32.3
 six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
